// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text/> Should render a Text element with default props 1`] = `
.c0 {
  color: undefined;
  font-size: 1.25rem;
  font-weight: normal;
  line-height: 1.4;
  margin: 0;
  padding: 0;
}

<p
  className="c0"
  color="dark"
  size="medium"
>
  Text Paragraph
</p>
`;

exports[`<Text/> Should render a Text element with given props 1`] = `
.c0 {
  color: undefined;
  font-size: 1.25rem;
  font-weight: bold;
  line-height: 1.4;
  margin: 0;
  padding: 0;
}

<p
  className="c0"
  color="light"
  size="medium"
>
  Text Paragraph
</p>
`;
